fix: #1106 fixed align labels

--- a/mw-webapp/src/logic/wayPage/WayPage.module.scss
+++ b/mw-webapp/src/logic/wayPage/WayPage.module.scss
@@ -157,6 +157,10 @@ $iconContainerSize: 25px;
   max-width: $maxWidthBlock;
 }
 
+.labelModalWrapper {
+  padding: $paddingExtraBig;
+}
+
 .wrap {
   @media (max-width: $mediaWidthMobileBig) {
     justify-content: center;
