--- a/mw-webapp/src/logic/wayPage/labels/AdjustLabelsModalContent.module.scss
+++ b/mw-webapp/src/logic/wayPage/labels/AdjustLabelsModalContent.module.scss
@@ -1,5 +1,8 @@
 @import "src/styles/variables";
 
 .adjustLabelsContent {
-  gap: $gapSmall;
+  gap: $gapBig;
+}
+.labelLinesContainer {
+  gap: $gapMedium;
 }
