--- a/mw-webapp/src/logic/wayPage/labels/LabelLine.module.scss
+++ b/mw-webapp/src/logic/wayPage/labels/LabelLine.module.scss
@@ -2,13 +2,18 @@
 
 .labelLine {
   align-items: baseline;
-  gap: $gapBig;
+  gap: $gapLarge;
+
+  @media (max-width: $mediaWidthTablet){
+    gap: $gapBig;;
+  }
 }
 
 .labelContainer {
   display: flex;
   min-width: 120px;
   max-width: 150px;
+  white-space: nowrap;
 }
 
 .labelDescription {
